fix(Swagger): Change documentation
